--- a/brothers.html
+++ b/brothers.html
@@ -14,6 +14,8 @@
 
 <!-- Default favicon (root, ICO format for widest support) -->
 <link rel="icon" href="/faviconktp.ico" sizes="any">
+<style>#footer-sections .page-section.dark-bold{display:none!important}</style>
+
 
 <!-- PNG favicons for modern browsers and Google Search -->
 <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16.png">
@@ -233,6 +235,9 @@
         color: var(--primary);
         font-weight: 600;
       }
+      /* Hide the old dark-blue footer only */
+        #footer-sections .page-section.dark-bold { display: none !important; }
+
     </style>
   </head>
 
