naming change ,, moses

--- a/brothers.html
+++ b/brothers.html
@@ -1827,7 +1827,7 @@
               </div>
             </div>
             <div class="profile-info">
-              <div class="profile-name">Moses Bandabilt</div>
+              <div class="profile-name">Moses Banda</div>
             </div>
           </div>
 
